kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-backend
spec:
  selector:
    matchLabels:
      app: fitness-backend
  template:
    metadata:
      labels:
        app: fitness-backend
    spec:
      containers:
      - name: fitness-backend
        image: vinhlee95/fitness-backend
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: "/_health"
            port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-backend-service
spec:
  type: NodePort
  selector:
    app: fitness-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
